--- a/lib/pytracking/pytracking/analysis/analysis_KF.ipynb
+++ b/lib/pytracking/pytracking/analysis/analysis_KF.ipynb
@@ -30,6 +30,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 32/32 [00:21<00:00,  1.49it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Computed results over 32 / 32 sequences\n",
+      "\n",
+      "Reporting results over 32 / 32 sequences\n",
+      "\n",
+      "esot500s                 | AUC        | OP50       | OP75       | Precision    | Norm Precision    |\n",
+      "pred_esot500_bs4         | 2.83       | 1.24       | 0.08       | 1.27         | 2.62              |\n",
+      "pred_esot500mix_bs4      | 5.71       | 2.56       | 0.56       | 2.27         | 3.36              |\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "trackers = []\n",
+    "trackers.extend(trackerlist(name='ostrack', parameter_name='pred_esot500_bs4', \n",
+    "                            run_ids=None, display_name='pred_esot500_bs4'))\n",
+    "trackers.extend(trackerlist(name='ostrack', parameter_name='pred_esot500mix_bs4', \n",
+    "                            run_ids=None, display_name='pred_esot500mix_bs4'))                          \n",
+    "stream_setting_id = 14\n",
+    "dataset_name = 'esot500s'\n",
+    "dataset = get_dataset(dataset_name)\n",
+    "print_results(trackers, dataset, dataset_name, merge_results=False, plot_types=('success', 'prec', 'norm_prec'),force_evaluation=True, stream_id=stream_setting_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
