JieChu updated his experiments configuration&results

--- a/lib/pytracking/pytracking/analysis/JieChu_analysis.ipynb
+++ b/lib/pytracking/pytracking/analysis/JieChu_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,6 +93,73 @@
     "dataset_name = 'esot500s'\n",
     "dataset = get_dataset(dataset_name)\n",
     "print_results(trackers, dataset, dataset_name, merge_results=False, plot_types=('success', 'prec', 'norm_prec'),force_evaluation=True, stream_id=stream_setting_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using subset:20 fps , 8 ms window for testing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 32/32 [00:00<00:00, 115.10it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Computed results over 32 / 32 sequences\n",
+      "\n",
+      "Reporting results over 32 / 32 sequences\n",
+      "\n",
+      "esot_20_8                   | AUC        | OP50       | OP75       | Precision    | Norm Precision    |\n",
+      "atom_esot500                | 21.23      | 16.54      | 2.54       | 29.93        | 25.13             |\n",
+      "dimp18_esot500              | 47.43      | 53.54      | 19.58      | 64.00        | 57.77             |\n",
+      "prdimp18_esot500            | 28.38      | 28.97      | 10.66      | 33.44        | 31.94             |\n",
+      "kys_esot500                 | 58.95      | 70.32      | 39.99      | 76.06        | 70.42             |\n",
+      "JieChu_tomp50_esot500       | 54.24      | 64.73      | 34.08      | 69.46        | 63.77             |\n",
+      "prdimp50                    | 53.29      | 60.36      | 33.95      | 66.84        | 61.13             |\n",
+      "tomp101                     | 55.67      | 65.01      | 37.44      | 69.44        | 63.47             |\n",
+      "JieChu_tomp101_esot500      | 49.56      | 56.97      | 30.29      | 62.87        | 58.82             |\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8ms\n",
+    "trackers = []\n",
+    "trackers.extend(trackerlist(name='atom', parameter_name='esot500',\n",
+    "                            display_name='atom_esot500'))\n",
+    "trackers.extend(trackerlist(name='dimp', parameter_name='dimp18_esot500', \n",
+    "                            display_name='dimp18_esot500'))\n",
+    "trackers.extend(trackerlist(name='dimp', parameter_name='prdimp18_esot500', \n",
+    "                            display_name='prdimp18_esot500'))\n",
+    "trackers.extend(trackerlist(name='kys', parameter_name='esot500', \n",
+    "                            display_name='kys_esot500'))\n",
+    "trackers.extend(trackerlist(name='tomp', parameter_name='JieChu_tomp50_esot500', \n",
+    "                            display_name='JieChu_tomp50_esot500'))\n",
+    "trackers.extend(trackerlist(name='dimp', parameter_name='prdimp50', \n",
+    "                            display_name='prdimp50'))\n",
+    "trackers.extend(trackerlist(name='tomp', parameter_name='tomp101', \n",
+    "                            display_name='tomp101'))\n",
+    "trackers.extend(trackerlist(name='tomp', parameter_name='JieChu_tomp101_esot500', \n",
+    "                            display_name='JieChu_tomp101_esot500'))\n",
+    "\n",
+    "dataset_name = ('esot_20_8')\n",
+    "dataset = get_dataset(dataset_name)\n",
+    "print_results(trackers, dataset, dataset_name, merge_results=False, plot_types=('success', 'prec', 'norm_prec'),force_evaluation=False)"
    ]
   }
  ],
